@@ -102,6 +102,37 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
+        <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.0</version>
+            <configuration>
+                <path>/swagger</path>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>start-tomcat</id>
+                    <phase>pre-integration-test</phase>
+                    <goals>
+                        <goal>run</goal>
+                    </goals>
+                    <configuration>
+                        <fork>true</fork>
+                        <port>8090</port>
+                        <systemProperties>
+                            <JAVA_OPTS>-Xmx768m -XX:MaxPermSize=512m</JAVA_OPTS>
+                        </systemProperties>
+                    </configuration>
+                </execution>
+                <execution>
+                    <id>stop-tomcat</id>
+                    <phase>post-integration-test</phase>
+                    <goals>
+                        <goal>shutdown</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
@@ -114,7 +145,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>2.4</version>
         <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
+          <warSourceDirectory>webapp</warSourceDirectory>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
